--- a/src/main/resources/profile-migrator-desa.properties
+++ b/src/main/resources/profile-migrator-desa.properties
@@ -5,9 +5,13 @@ dataSource.url=jdbc:oracle:thin:@Srvorad2.garba.com.ar:1626:gartrde
 dataSource.password=pickup_0000_desa
 dataSource.username=pickup
 
-
 genesis.service.observed.url =http://localhost:8080/services/observation
 genesis.service.observed.report=/report/observed
+genesis.service.ip.report=/ip/observed
+genesis.service.card.report=/card/observed
+genesis.service.address.report=/address/observed
+genesis.service.person.report=/person/observed
+
 genesis.service.observed.token.name =X-Tek-App-Token
 genesis.service.nebserved.token.value =hnjJYw9JXHIeGuADntfwA5L0jnlhnA71K2V43lbbQnI=
 
