changes in migrador

--- a/src/main/resources/profile-migrator-desa.properties
+++ b/src/main/resources/profile-migrator-desa.properties
@@ -11,9 +11,11 @@ genesis.service.ip.report=/ip/observed
 genesis.service.card.report=/card/observed
 genesis.service.address.report=/address/observed
 genesis.service.person.report=/person/observed
+genesis.service.cityId.search=/searchCity/cityId
+genesis.service.cardId.search=/seachCard/cardId
 
 genesis.service.observed.token.name =X-Tek-App-Token
-genesis.service.nebserved.token.value =hnjJYw9JXHIeGuADntfwA5L0jnlhnA71K2V43lbbQnI=
+genesis.service.nebserved.token.value =MhqYi9Xf+EKLvR7RdiIN7bAiMp0A0TxN180D4I0N8Eg=
 
 #Test
 #dataSource.url=jdbc:oracle:thin:@Srvorad2.garba.com.ar:1701:gartrqa
