changes in boeTest Migrator

--- a/src/main/resources/profile-migrator-desa.properties
+++ b/src/main/resources/profile-migrator-desa.properties
@@ -10,9 +10,10 @@ genesis.service.observed.report=/report/observed
 genesis.service.ip.report=/ip/observed
 genesis.service.card.report=/card/observed
 genesis.service.address.report=/address/observed
-genesis.service.person.report=/person/observed
+genesis.service.person.report=/report/person
 genesis.service.cityId.search=/searchCity/cityId
 genesis.service.cardId.search=/seachCard/cardId
+genesis.service.observed.check=/check/observed
 
 genesis.service.observed.token.name =X-Tek-App-Token
 genesis.service.nebserved.token.value =MhqYi9Xf+EKLvR7RdiIN7bAiMp0A0TxN180D4I0N8Eg=
